# compile_and_run

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.ps1  build.sh  compile_and_run.cpp  compile_and_run.ps1
